nunjucks conversion from html

--- a/app/views/water-r3/current/eligibility/common/project-items.html
+++ b/app/views/water-r3/current/eligibility/common/project-items.html
@@ -14,7 +14,7 @@
               Select all the items your project needs
             </span>
 
-      <form method="post" action="storage">
+              <form method="post" action="../funding/cost">
 
                {{ govukCheckboxes({
                   name: "Reservoir construction and infrastructure",
