--- a/app/views/water-r3/current/eligibility/funding/elim-remaining-cost.html
+++ b/app/views/water-r3/current/eligibility/funding/elim-remaining-cost.html
@@ -6,44 +6,30 @@
 
 {% block content %}
 
-<div class="govuk-grid-row">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
-        <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">
+        You cannot apply for a grant from this scheme
+      </h1>
+      <p>You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.</p>
 
-            <form method="post">
+      {{ govukInsetText({
+        html: '<p>You can use:</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>loans</li>
+          <li>overdrafts</li>
+          <li>the Basic Payment Scheme</li>
+          <li>agri-environment schemes such as the Countryside Stewardship Scheme</li>
+        </ul>
+      '
+      }) }}
 
-                <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
+      <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" target="_blank" class="govuk-!-font-size-19">
+         See other grants you may be eligible for.
+      </a>
 
-                <p>
-                    You cannot use public money (for example, grant funding from government or local authorities) towards the project costs.
-                </p>
-
-                <p>
-                    You also cannot use money from a producer organisation under the Fresh Fruit and Vegetable Aid Scheme.
-                </p>
-
-                <p>
-                    You can use:
-                </p>
-
-                <ul class="govuk-list govuk-list--bullet">
-
-                    <li>loans</li>
-                    <li>overdrafts</li>
-                    <li>delinked payments</li>
-
-                </ul>
-
-                <p>
-                    <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
-                        See other grants you may be eligible for.
-                    </a>
-                </p>
-
-            </form>
-
-        </div>
-
-</div>
+    </div>
+  </div>
 
 {% endblock %}
