--- a/app/views/water-r3/current/eligibility/funding/abstraction-required-condition.html
+++ b/app/views/water-r3/current/eligibility/funding/abstraction-required-condition.html
@@ -32,7 +32,7 @@
 
         <p>If you have already applied for an abstraction licence or variation but it might not be issued by then, please email <a href=""> FTF@rpa.gov.uk</a> </p>
 
-            <form class="form" action="{{ nextUrl }}" method="post">
+            <form class="form" action="current-irrigating" method="post">
 
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
 
