--- a/app/views/adding-value-2024/current2/eligibility/adding-value/top-fruit-storage.html
+++ b/app/views/adding-value-2024/current2/eligibility/adding-value/top-fruit-storage.html
@@ -32,7 +32,7 @@
                             value: 'Yes',
                             checked: true if data['top-fruit-storage'] == 'Yes',
                             attributes: {
-                                'data-next': '../funding/solar-pv'
+                                'data-next': '../funding/cost'
                             }
                         },
                         {
