--- a/app/views/adding-value-2024/current2/start-page.html
+++ b/app/views/adding-value-2024/current2/start-page.html
@@ -49,16 +49,16 @@
       </ul>
 
       <p>
-        You can apply for up to 40% of the estimated cost of project items. You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system.
+       You can apply for up to 40% of the estimated cost of project items.  {# You have the option to apply for up to 25% of the estimated cost of buying and installing a solar PV system. #}
       </p>
 
       <p>
         The minimum grant for project costs is £25,000 (40% of £62,500). The maximum grant you can apply for is £300,000.
       </p>
 
-      <p>
+      {# <p>
         You can apply for up to an additional £100,000 for solar PV systems costs. Funding for solar PV cannot be more than grant funding for project costs.
-      </p>
+      </p> #}
 
       {{ govukInsetText ({
         text: 'If your project is eligible, you will be able to submit your online application to the Rural Payments Agency (RPA).'
