adding link to AV R2 solar removal

--- a/app/views/adding-value-2024/index.html
+++ b/app/views/adding-value-2024/index.html
@@ -68,6 +68,11 @@
           <p class='govuk-heading-m'>Previous versions</p>
 
           <p class='govuk-list app-list--definition'>
+            <a href='/adding-value-2024/current2/start-page' class="govuk-link--no-visited-state">Solar removal (policy proposal, not yet confirmed)</a><br>
+            Not usability tested
+          </p>
+
+          <p class='govuk-list app-list--definition'>
             <a href='/adding-value-2024/v2/start-page' class="govuk-link--no-visited-state">Pre-UAT</a><br>
             Not usability tested
             </p>
