--- a/app/views/adding-value-2024/index.html
+++ b/app/views/adding-value-2024/index.html
@@ -69,7 +69,7 @@
 
           <p class='govuk-list app-list--definition'>
             <a href='/adding-value-2024/current2/start-page' class="govuk-link--no-visited-state">Solar removal (policy proposal, not yet confirmed)</a><br>
-            Not usability tested
+            Not tested - last updated 16 Aug 2024
           </p>
 
           <p class='govuk-list app-list--definition'>
