fixing project cost calculations

--- a/app/views/water-r3/current/eligibility/funding/cost.html
+++ b/app/views/water-r3/current/eligibility/funding/cost.html
@@ -1,6 +1,5 @@
 {% extends 'water-r3/layout.html' %}
 
-
 {% block pageTitle %}
     What is the total estimated cost of the items?
 {% endblock %}
@@ -11,7 +10,7 @@
 
         <div class="govuk-grid-column-two-thirds">
 
-            <form action="potential-funding">
+            <form action="elim-cost">
             
                 <h1 class="govuk-heading-l">
                     What is the total estimated cost of the items?
