--- a/app/views/water-r3/current/eligibility/funding/elim-cost.html
+++ b/app/views/water-r3/current/eligibility/funding/elim-cost.html
@@ -6,27 +6,19 @@
 
 {% block content %}
 
-{% set grantAmount = data['cost'] | float | percent(50) %}
+{% set grantAmount = data['cost'] | float | percent(40) %}
 
-{% if grantAmount > 500000 %}
-    {% set grantAmount = 500000 %}
-{% endif %}
+{% if grantAmount >= 35000 %}
 
-{% if grantAmount >= 20000 %}
+    {# {% if data['solar-pv'] == 'Yes' %}
 
-    {% if data['solar-pv'] == 'Yes' %}
-
-        {% if grantAmount == 500000 %}
-            {{ 'potential-funding' | redirect | safe }}
-        {% else %}
-            {{ 'solar-pv-cost' | redirect | safe }}
-        {% endif %}
+        {{ 'solar-pv-cost' | redirect | safe }}
 
     {% else %}
-    
+     #}
         {{ 'potential-funding' | redirect | safe }}
 
-    {% endif %}
+    {# {% endif %} #}
 
 {% endif %}
 
@@ -40,9 +32,10 @@
                     You cannot apply for a grant from this scheme
                 </h1>
 
-                <p>
-                    The minimum grant you can apply for is £20,000 (50% of £40,000).
-                </p>
+                <div class="govuk-inset-text">
+                    The minimum grant you can apply for is £35,000 (40% of £87,500).<br>
+                    The maximum grant is £500,000.
+                </div>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
