--- a/app/views/water-r3/current/eligibility/funding/current-irrigating.html
+++ b/app/views/water-r3/current/eligibility/funding/current-irrigating.html
@@ -20,36 +20,37 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="change-summerabs" method="post">
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                Are you currently irrigating?
-              </h1>
-            </legend>
-            <br>
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios govuk-radios--inline">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="current-irrigating-1" name="current-irrigating" type="radio"  value="Yes" {{ checked("current-irrigating", "Yes") }}>
-                  <label class="govuk-label govuk-radios__label" for="current-irrigating-1">
-                    Yes
-                  </label>
-                </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="current-irrigating-2" name="current-irrigating" type="radio" value="No" {{ checked("current-irrigating", "No") }}>
-                <label class="govuk-label govuk-radios__label" for="current-irrigating-2">
-                  No
-                </label>
-              </div>
-            </div>
-          </fieldset>
-          <br>
-        <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
-          Continue
-        </button>
+      <form class="form" action="change-summerabs" method="post">
 
+       {{ govukRadios ({
+        classes: 'govuk-radios--inline',
+        idPrefix: 'current-irrigating', 
+        name: 'current-irrigating', 
+        fieldset: {
+          legend: {
+            text: 'Are you currently irrigating?',
+            isPageHeading: true,
+            classes: 'govuk-fieldset__legend--l'
+          }
+        },
+
+        items: [
+          {
+            value: 'Yes',
+            text: 'Yes',
+            checked: true if 'Yes' | isIn(data['current-irrigating'])
+          },
+          {
+            value: 'No',
+            text: 'No',
+            checked: true if 'No' | isIn(data['current-irrigating'])
+          }
+        ]
+      }) }}
+
+         {{ govukButton ({
+                    html: 'Continue'
+                }) }}
 
       </form>
     </div>
