--- a/app/views/water-r3/current/eligibility/funding/water-source.html
+++ b/app/views/water-r3/current/eligibility/funding/water-source.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Irrigation water source
+  Where will the irrigation water come from?
 {% endblock %}
 
 {% block beforeContent %}
