--- a/app/views/index.html
+++ b/app/views/index.html
@@ -12,9 +12,10 @@
   Tactical grants
 </h1>
 <p>
-  Built using the latest GOV.UK Prototype Kit v13.0.0
-  <br><span class="govuk-body govuk-!-font-size-14"># migrated from v12 on 12 September 2023</span>
-  <br><span class="govuk-body govuk-!-font-size-14"># Read <a href='https://github.com/alphagov/govuk-prototype-kit/releases/tag/v13.0.0' class="govuk-link--no-visited-state">release notes</a>
+  Built using the latest GOV.UK Prototype Kit v13.6.2
+  <br><span class="govuk-body govuk-!-font-size-14"># migrated from v13.0 in August 2024</span>
+  <br><span class="govuk-body govuk-!-font-size-14"># Read <a href='https://github.com/alphagov/govuk-prototype-kit/releases' target="new" 
+  rel="noreferrer" class="govuk-link--no-visited-state">releases</a>
   </span>
 </p>
 
