--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,28 +32,22 @@
   </thead>
   <tbody class="govuk-table__body">
 
-      {# <tr class="govuk-table__row">
-    <td class="govuk-table__cell"><a href="new" class="govuk-lik govuk-link--no-visited-state">Adult cattle housing - core screens</a>
+  <tr class="govuk-table__row">
+    <td class="govuk-table__cell"><a href="water-r3/index" class="govuk-lik govuk-link--no-visited-state">Water Management Grant</a>
       </td>
-
-    <td class="govuk-table__cell">Test checker (Last updated on 8 July 2024)</td>
-
-  </tr> #}
+    <td class="govuk-table__cell">Checker (R3, Last updated on 29 Aug 2024)</td>
+  </tr>
 
   <tr class="govuk-table__row">
     <td class="govuk-table__cell"><a href="slurrystorage-2024" class="govuk-lik govuk-link--no-visited-state">Slurry Infrastructure Grant (2024)</a>
       </td>
-
     <td class="govuk-table__cell">Checker (R1, last updated on 16 May 2024)</td>
-
   </tr>
 
   <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="ahw-adult-cattle-housing" class="govuk-lik govuk-link--no-visited-state">Adult cattle housing grant</a>
         </td>
-
       <td class="govuk-table__cell">Checker (R1, last updated on 22 April 2024)</td>
-
     </tr>
 
     <tr class="govuk-table__row">
@@ -65,7 +59,6 @@
      <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="layinghens" class="govuk-lik govuk-link--no-visited-state">Laying hens grant</a>
         </td>
-
       <td class="govuk-table__cell">Checker (R3, last updated on 14 March 2024)</td>
 
     </tr>
