converting to nunjucks

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -33,7 +33,7 @@
   <tbody class="govuk-table__body">
 
   <tr class="govuk-table__row">
-    <td class="govuk-table__cell"><a href="water-r3/index" class="govuk-lik govuk-link--no-visited-state">Water Management Grant</a>
+    <td class="govuk-table__cell"><a href="water-r3/index" class="govuk-lik govuk-link--no-visited-state">Water Management Grant (2024)</a>
       </td>
     <td class="govuk-table__cell">Checker (R3, Last updated on 29 Aug 2024)</td>
   </tr>
