irrigation system and water source

--- a/app/views/water-r3/current/eligibility/funding/change-summerabs.html
+++ b/app/views/water-r3/current/eligibility/funding/change-summerabs.html
@@ -1,19 +1,7 @@
-{% extends "layout.html" %}
+{% extends 'water-r3/layout.html' %}
 
 {% block pageTitle %}
-Changing the summer abstraction and mains
-{% endblock %}
-
-{% block beforeContent %}
-{% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
-  {{ govukPhaseBanner({
-    tag: {
-    text: "prototype",
-    classes: "govuk-tag--pink"
-    },
-      html: 'This is not a full service. It is not production code and you might experience problems.'
-  }) }}
-<a class="govuk-back-link" href="{{ backUrl }}">Back</a>
+    Use of water during the summer
 {% endblock %}
 
 {% block content %}
