--- a/app/views/water-r3/current/eligibility/funding/water-source.html
+++ b/app/views/water-r3/current/eligibility/funding/water-source.html
@@ -18,10 +18,9 @@
 
 {% block content %}
 
-
-  <div class="govuk-grid-row">
+    <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
+      <form action="irrigation-system" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
