--- a/app/views/water-r3/current/eligibility/funding/irrigation-systems.html
+++ b/app/views/water-r3/current/eligibility/funding/irrigation-systems.html
@@ -29,12 +29,12 @@
           idPrefix: 'irrigation-systems-current',
           name: 'irrigation-systems-current',
           fieldset: {
-            legend: {
-              text: 'What systems are currently used to irrigate?',
-              isPageHeading: true,
-              classes: 'govuk-fieldset__legend--m'
-            }
-          },
+                      legend: {
+                        html: '<h2 class="govuk-heading-m">What systems are currently used to irrigate?</h2>',
+                        isPageHeading: false
+                        
+                      }
+                    },
           hint: {
             text: 'Select up to 2 options'
           },
@@ -77,17 +77,17 @@
           ]
         }) }}
 
-           {{ govukCheckboxes ({
+      {{ govukCheckboxes ({
           classes: 'govuk-checkboxes',
           idPrefix: 'irrigation-systems-target',
           name: 'irrigation-systems-target',
           fieldset: {
-            legend: {
-              text: 'What systems will be used to irrigate?',
-              isPageHeading: true,
-              classes: 'govuk-fieldset__legend--m'
-            }
-          },
+                      legend: {
+                        html: '<h2 class="govuk-heading-m">What systems will be used to irrigate?</h2>',
+                        isPageHeading: false
+                        
+                      }
+                    },
           hint: {
             text: 'Select up to 2 options'
           },
